infrastructure/develop/user-tracking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-tracking-deployment
  labels:
    app: user-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-tracking
  template:
    metadata:
      labels:
        app: user-tracking
    spec:
      containers:
      - name: user-tracking
        # image:
        ports:
        - containerPort: 8080
