infrastructure/develop/user-tracking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-tracking-service
spec:
  selector:
    app: user-tracking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
