infrastructure/develop/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracknest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user-tracking
        pathType: Prefix
        backend:
          service:
            name: user-tracking-service
            port:
              number: 80
